--- a/README
+++ b/README
@@ -4,3 +4,4 @@ Simple HadoopDemo(MP1) for CS511
 Task of P1.java is to count the 3rd, 4th, 5th field of given data.
 Task of P2.java is to find all "complex relation" within given data.
 
+This is a HW, codebase is deleted in case someone in the same class accidently see it.
